<resources>
    <string name="app_name">My Application</string>
    <string name="title_schedule">경기</string>
    <string name="title_team">순위</string>
    <string name="title_group">그룹</string>
    <string name="vs">VS</string>
    <string name="win">승</string>
    <string name="lose">패</string>
    <string name="btn_addTeam">+ 팀 추가</string>
    <string name="textField_name">팀명</string>
    <string name="textField_group">그룹명</string>
    <string name="textField_alias">별칭</string>
    <string name="textField_playNum">사이클 수</string>
    <string name="description_playNum">동일한 팀 간의 경기 횟수</string>
    <string name="error_teamName_required">팀명은 반드시 입력해야 합니다.</string>
    <string name="error_alias_maxCount">별칭은 %1$d글자 이하여야 합니다.</string>
    <string name="error_playNum_min">1 이상의 숫자를 입력해야 합니다.</string>
    <string name="error_groupName_required">그룹명은 반드시 입력해야 합니다.</string>
    <string name="teamInfo">팀 정보</string>
    <string name="ranking">순위</string>
    <string name="winAndLose">승 / 패</string>
    <string name="roundPt">라운드 승점</string>
    <string name="avgPoint">평균 포인트</string>
    <string name="drawPt">무승부 기록</string>
    <string name="playList">경기 기록</string>
    <string name="includeTeams">소속 팀</string>
    <string name="groupPlayInfo">%1$d 경기 중 %2$d 경기 완료</string>
    <string name="textField_category">카테고리</string>
    <string name="check_chance">%1$s팀이 %2$d위 안에 들 수 있는\n가능성을 찾고 있습니다.</string>
    <string name="textField_rank">목표 순위</string>
    <string name="error_rank_required">목표 순위는 반드시 입력해야 합니다.</string>
    <string name="error_rank_max">불가능한 순위입니다.</string>
    <string name="error_team_required">팀을 선택해 주세요.</string>
    <string name="textField_team">팀</string>
    <string name="title_result">결과</string>
    <string name="predictResult">%1$s VS %2$s : %3$s 승리</string>
    <string name="predict_check">%1$d가지 상황에서 %2$s팀이 %3$d위 안에 들 수 있습니다.</string>
    <string name="predict_check_rnd">%1$d가지 상황에서 라운드 승점에 따라 %2$s팀이 %3$d위 안에 들 수 있습니다.</string>
    <string name="predict_reverse_check">아래 %1$d가지 상황에서는 %2$s팀이 %3$d위 안에 들 수 없습니다.\n라운드 비교가 필요한 상황을 확인하세요.</string>
    <string name="predict_win">%1$d가지 상황에서 %2$s팀이 %3$d위 안에 들 수 있습니다.</string>
    <string name="predict_reverse_win">아래 %1$d가지 상황이 아니라면 %2$s팀이 %3$d위 안에 들 수 있습니다.</string>
    <string name="predict_rnd">%1$d가지 상황에서 라운드 승점에 따라 %2$s팀이 %3$d위 안에 들 수 있습니다.\n나머지 상황에서는 불가능합니다.</string>
    <string name="predict_reverse_rnd">%1$d가지 상황에서 라운드 승점에 따라 %2$s팀이 %3$d위 안에 들 수 있습니다.\n나머지 상황에서 항상 가능합니다.</string>
    <string name="predict_null">모든 상황에서 %1$s팀은 %2$d위 안에 들 수 없습니다.</string>
    <string name="predict_perfect_win">모든 상황에서 %1$s팀은 %2$d위 안에 들 수 있습니다.</string>
    <string name="predict_perfect_rnd">모든 상황에서 라운드 승점에 따라 %1$s팀이 %2$d위 안에 들 수 있습니다.</string>
</resources>