<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addGroupDialog_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:errorEnabled="true"
        android:hint="@string/textField_category"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
        <AutoCompleteTextView
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/addGroupDialog_category_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addGroupDialog_groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addGroupDialog_category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:errorEnabled="true"
        app:errorContentDescription="@string/error_groupName_required"
        android:hint="@string/textField_group"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addGroupDialog_groupName_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addGroupDialog_playNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addGroupDialog_groupName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:helperText="@string/description_playNum"
        android:hint="@string/textField_playNum"
        app:suffixText="회"
        app:errorEnabled="true"
        app:errorContentDescription="@string/error_playNum_min"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addGroupDialog_playNum_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:text="2"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>