<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addTeamDialog_groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/textField_group"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addTeamDialog_groupName_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:focusable="false"
            android:clickable="false"
            android:text="그룹명"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addTeamDialog_teamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/addTeamDialog_groupName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/textField_name"
        app:errorEnabled="true"
        app:errorContentDescription="@string/error_teamName_required"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addTeamDialog_teamName_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addTeamDialog_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/addTeamDialog_teamName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/textField_alias"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:errorEnabled="true"
        app:errorContentDescription="@string/error_alias_maxCount"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addTeamDialog_alias_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>