<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        style="@style/Widget.Material3.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/Widget.App.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="title"
            app:menu="@menu/edit_menu"
            android:padding="7dp"
            app:titleMarginStart="20dp">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:visibility="gone"
                android:id="@+id/team_teamInfoTitle"
                android:layout_width="420dp"
                android:layout_height="44dp"
                android:background="?attr/colorSecondaryContainer"
                android:paddingHorizontal="25dp"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
                android:text="@string/teamInfo"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/team_teamInfo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <GridLayout
                android:id="@+id/team_teamInfo"
                android:columnCount="2"
                android:rowCount="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/team_teamInfoTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/team_teamPlayTitle"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp">
                <TextView
                    android:text="@string/ranking"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner2"
                    android:backgroundTint="?attr/colorTertiaryContainer"/>
                <TextView
                    android:id="@+id/team_rank"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:layout_columnWeight="7"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="25dp"/>
                <TextView
                    android:text="@string/winAndLose"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner2"
                    android:backgroundTint="?attr/colorTertiaryContainer"/>
                <TextView
                    android:id="@+id/team_winLose"
                    android:text="0 / 0"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:layout_columnWeight="7"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="25dp"/>
                <TextView
                    android:text="@string/roundPt"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner2"
                    android:backgroundTint="?attr/colorTertiaryContainer"/>
                <TextView
                    android:id="@+id/team_roundPt"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:layout_columnWeight="7"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="25dp"/>
                <TextView
                    android:text="@string/avgPoint"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner2"
                    android:backgroundTint="?attr/colorTertiaryContainer"/>
                <TextView
                    android:id="@+id/team_pt"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:layout_columnWeight="7"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="25dp"/>
                <TextView
                    android:text="@string/drawPt"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_columnWeight="1"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner2"
                    android:backgroundTint="?attr/colorTertiaryContainer"/>
                <TextView
                    android:id="@+id/team_drawPt"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="left"
                    android:layout_columnWeight="7"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="25dp"/>
            </GridLayout>

            <TextView
                android:id="@+id/team_teamPlayTitle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="?attr/colorSecondaryContainer"
                android:paddingHorizontal="25dp"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
                android:text="@string/playList"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/team_playInfoView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/team_teamInfo" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/team_playInfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                app:layout_constraintTop_toBottomOf="@+id/team_teamPlayTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>