<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rankItemH_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/rankItemH_rnd"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintWidth_percent="0.15"
            android:layout_marginStart="3dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/avgPoint"
            android:autoSizeMaxTextSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/rankItemH_win"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rankItemH_win"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintWidth_percent="0.15"
            android:layout_marginStart="3dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/roundPt"
            android:autoSizeMaxTextSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/rankItemH_point"
            app:layout_constraintRight_toLeftOf="@id/rankItemH_rnd"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/rankItemH_point"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintWidth_percent="0.15"
            android:gravity="center"
            android:text="@string/win"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/rankItemH_win"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rankView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/rankItemH_info"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rankItemH_predictBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/psychology_alt"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
